[gd_scene load_steps=4 format=2]

[ext_resource path="res://Bullets/Nuke_script.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Nuke.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 100.0

[node name="Nuke_scene" type="Area2D"]
collision_layer = 2147483665
collision_mask = 4
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2( 0.2, 0.2 )
polygon = PoolVector2Array( 0, -129.4, 1.39999, -126, 17.4, -126, 19.4, -120, 30, -120, 30, -117.4, 31.4, -114, 34.8, -114, 38, -110.8, 38, -95.4, 44, -93.4, 44, -78, 46.8, -78, 50, -74.8, 50, -30, 47.5, -30, 44, -28.6, 44, -12, 41.5, -12, 38, -10.6, 38, -7.2, 34.8, -4, 32, -4, 32, 12, 29.7, 12, 31.7, 24, 34.8, 24, 38, 27.2, 38, 36, 40.8, 36, 44, 39.2, 44, 54, 47.7, 54, 49.7, 66, 52.8, 66, 56, 69.2, 56, 84.6, 62, 86.6, 62, 102, 64.8, 102, 68, 105.2, 68, 132, 65.8, 132, 57, 140, 14, 140, 14, 137.5, 12.6, 134, 9.2, 134, 6, 130.8, 6, 128, 3.2, 128, 0, 124.8, 0, 122, -4, 122, -4, 131.4, -10, 133.4, -10, 137.1, -14.4, 140, -34, 140, -34, 137.5, -35.4, 134, -38.8, 134, -42, 130.8, -42, 122, -46, 122, -46, 125.4, -52, 127.4, -52, 130.8, -55.2, 134, -58, 134, -58, 136.8, -61.2, 140, -106, 140, -106, 137.5, -107.4, 134, -110.8, 134, -114, 130.8, -114, 104.6, -108, 102.6, -108, 86, -105.4, 86, -102, 84.6, -102, 68, -99.4, 68, -96, 66.6, -96, 56, -93.4, 56, -90, 54.6, -90, 38, -87.4, 38, -84, 36.6, -84, 26, -81.4, 26, -78, 24.6, -78, 14, -75.4, 14, -73.1, 13.1, -78, 11.4, -78, -4, -81.4, -4, -83.4, -10, -86.8, -10, -90, -13.2, -90, -28, -92.8, -28, -96, -31.2, -96, -76, -93.4, -76, -90, -77.4, -90, -94, -87.4, -94, -84, -95.4, -84, -112, -81.4, -112, -78, -113.4, -78, -116.8, -74.8, -120, -65.4, -120, -63.4, -126, -47.4, -126, -46, -129.4, -46, -132, 0, -132 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = -0.811578
shape = SubResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_Nuke_scene_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
